 - Qt: Fix Battle Chip view not displaying chips on some DPI settings
 - mGUI: Fix closing down a game if an exit is signalled
 - mVL: Fix injecting accidentally draining non-injection buffer
 - SM83: Simplify register pair access on big endian
 - VFS: Fix directory node listing on some filesystems
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - GB: Allow pausing event loop while CPU is blocked
 - GBA: Allow pausing event loop while CPU is blocked
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - mGUI: Show battery percentage
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Memory viewer now supports editing decimal values directly (closes mgba.io/i/1705)
 - Util: Reset vector size on deinit
 - VFS: Change semantics of VFile.sync on mapped files (fixes mgba.io/i/1730)

0.8.3: (2020-08-03)
Emulation fixes:
 - ARM: Fix LDM^ writeback to user-mode register
 - ARM: Fix LDM^ {pc} differences (fixes mgba.io/i/1698)
 - ARM: Fix edge case with Thumb SBC flags (fixes mgba.io/i/1818)
 - GB MBC: Fix MBC1 RAM enable bit selection
 - GB MBC: Fix MBC2 bit selection
 - GB Memory: Fix OAM DMA from top 8 kB
 - GB Video: Always initialize palette
 - GBA Savedata: Fix potential corruption when loading a 1Mbit flash save
 - GBA Video: Fix invalid read in mode 4 mosaic
 - GBA Video: Fix color of disabled screen
 - SM83: Fix flags on little endian PowerPC
Other fixes:
 - 3DS: Fix garbage on borders of scaled screens
 - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
 - All: Correct more format strings on Windows (fixes mgba.io/i/1817)
 - ARM: Fix decoder detection of branches with ALU and LDR instrctions
 - CMake: Fix build with libzip 1.7
 - CMake: Add missing dllexports.h file to dev installation
 - GB Core: Fix extracting SRAM when none is present